about page: fixed spacing issue in acknowledgements

--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -55,18 +55,18 @@
   .contact-section-container {
       .left-section{
         float: left;
-        min-height: 900px;
+        min-height: 975px;
         width: 40%;
       }
       .right-section{
         width: 40%;
         float:left;
-        min-height: 900px;
+        min-height: 975px;
       }
       .spacing {
         width:20%;
         float:right;
-        min-height: 900px;
+        min-height: 975px;
       }
   }
 
